--- a/src/static/scss/slideshow/slideshow.scss
+++ b/src/static/scss/slideshow/slideshow.scss
@@ -4,3 +4,12 @@
         width: 100%;
     }
 }
+
+
+.background {
+    width: 100%;
+    height: 100%;
+    background-color: #fffff5;
+    box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .5);
+    cursor: pointer;
+}
