--- a/src/static/scss/slideshow/slideshow.scss
+++ b/src/static/scss/slideshow/slideshow.scss
@@ -5,11 +5,22 @@
     }
 }
 
-
 .background {
     width: 100%;
     height: 100%;
     background-color: #fffff5;
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .5);
     cursor: pointer;
+}
+
+.film {
+    width: 95%;
+    height: 85%;
+    background-color: #222;
+    pointer-events: none;
+    margin: 2.5% auto 0;
+}
+
+.overflow-hidden {
+    overflow: hidden;
 }
