--- a/src/static/scss/cube/_cube.scss
+++ b/src/static/scss/cube/_cube.scss
@@ -2,6 +2,11 @@
 
     div {
         height: 100%;
-        backface-visibility: inherit;
     }
+}
+
+.cube-view {
+
+    height: 100%;
+    width: 100%;
 }
