cube scroller working, needs translate modifier to keep it in view

--- a/src/static/scss/cube/_cube.scss
+++ b/src/static/scss/cube/_cube.scss
@@ -1,6 +1,7 @@
 .cube-side {
 
-    div {
+    img {
+        width: 100%;
         height: 100%;
     }
 }
@@ -9,4 +10,10 @@
 
     height: 100%;
     width: 100%;
+}
+
+
+.scroll-control {
+    width: 100%;
+    height: 100%;
 }
