--- a/src/static/js/app/templates/cube-side-view.html
+++ b/src/static/js/app/templates/cube-side-view.html
@@ -1,4 +1,4 @@
-<div style="width: {{ size.[0] }}px; height: {{ size.[1] }}px; background-color: {{ color }};">
+<img src="static/img/tech4.jpg" style="width: {{ size.[0] }}px; height: {{ size.[1] }}px; background-color: {{ color }};">
     {{ content }}
-</div>
+</img>
 
